[package]
name = "macro_lol"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "*"
proc-macro2 = "*"

[dependencies.syn]
version = "*"
features = ["parsing", "extra-traits", "full"]

[lib]
proc-macro = true
